--- a/Smart-Battery/CMakeLists.txt
+++ b/Smart-Battery/CMakeLists.txt
@@ -41,7 +41,7 @@ pico_set_program_name(Smart-Battery "Smart-Battery")
 pico_set_program_version(Smart-Battery "0.1")
 
 # Generate PIO header
-pico_generate_pio_header(Smart-Battery ${CMAKE_CURRENT_LIST_DIR}/blink.pio)
+# pico_generate_pio_header(Smart-Battery ${CMAKE_CURRENT_LIST_DIR}/blink.pio)
 
 # Modify the below lines to enable/disable output over UART/USB
 pico_enable_stdio_uart(Smart-Battery 0)
